--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -8,10 +8,11 @@ body{
     border: 0;
     font-weight: inherit;
     font-style: inherit;
+    font-size: 12px;
     font-family: inherit;
     text-align: left;
     vertical-align: baseline;
-    //font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     //font-family: 'PT Sans', sans-serif;
     //font-family: 'Roboto', sans-serif;
     //font-family: 'Source Sans Pro', sans-serif;
