--- a/app/sass/content/_home-head.scss
+++ b/app/sass/content/_home-head.scss
@@ -1,7 +1,7 @@
-.home {
+.home-head {
   background-color: #d4dfe1;
   margin-top: 20px;
-  &__head {
+  &__wrap {
     position: relative;
     float: left;
     margin-top: 20px;
