--- a/app/sass/content/_home-stock.scss
+++ b/app/sass/content/_home-stock.scss
@@ -1,5 +1,6 @@
 .home-stock {
   background-color: #fafafa;
+  overflow: hidden;
   &__head{
     position: relative;
     float: left;
@@ -126,7 +127,7 @@
           float: right;
         }
         img {
-          max-width: 80%;
+          max-width: 183px;
         }
         h3 {
           font-size: 12px;
