--- a/app/sass/content/_home-reviews.scss
+++ b/app/sass/content/_home-reviews.scss
@@ -34,6 +34,7 @@
           color: #bfbfbf;
           p {
             font-size: 15px;
+            font-style: normal;
           }
         }
         p {
@@ -42,6 +43,7 @@
           float: left;
           margin: 0;
           font-size: 18px;
+          font-style: italic;
         }
         &:before {
           content: "";
