--- a/app/sass/header/_head.scss
+++ b/app/sass/header/_head.scss
@@ -3,7 +3,7 @@
   @include flex-direction(column);
   @include justify-content(center);
   img {
-    padding: 10px;
+    padding: 10px 10px 10px 0;
   }
   &__top {
     @include display-flex(flex);
@@ -13,7 +13,7 @@
     margin: 30px 0;
     li {
       list-style: none;
-      padding: 1%;
+      padding: 1.5%;
     }
     a {
       color: #000;
@@ -38,7 +38,10 @@
       @include justify-content(flex-end);
       ul {
         @include display-flex(flex);
+        @include justify-content(flex-end);
         @include align-items(center);
+        padding-left: 0;
+        width: 100%;
       }
     }
   }
@@ -46,18 +49,20 @@
     @include display-flex(flex);
     @include justify-content(space-between);
     @include align-items(center);
-    margin: 10px;
+    margin: 0 0 10px 0;
     &__logo {
       @include flex-grow(1);
     }
     &__search {
       @include flex-grow(6);
       position: relative;
+      z-index: 20;
       input {
         height: 38px;
         width: 400px;
         border-color: #3c9dd0;
         padding-left: 20px;
+        z-index: 20;
         &::placeholder {
           color: #afafaf;
         }
@@ -66,13 +71,13 @@
         position: absolute;
         left: 380px;
         top: 3px;
+        cursor: pointer;
       }
     }
     &__callback {
       @include flex-grow(4);
-      //@include display-flex(flex);
-      //@include flex-direction(column);
       text-align: right;
+      z-index: 20;
       p {
         font-size: 20px;
         margin: 0;
@@ -83,7 +88,10 @@
     }
   }
   &__bottom {
-    margin-top: 40px;
+    margin-top: 20px;
+    position: relative;
+    float: left;
+    z-index: 20;
     &__nav {
       ul {
         margin: 0px;
@@ -95,7 +103,7 @@
         width: 100%;
         li.drop {
           float: left;
-          width: 150px;
+          width: 130px;
           position: relative;
           margin-right: 10px;
           a.border span:first-child:before {
@@ -152,7 +160,7 @@
             content:"";
             display: none;
             position: absolute;
-            right: 10px;
+            right: 5px;
             top: 40%;
             border-left: 5px solid transparent;
             border-top: 5px solid #000;
@@ -183,6 +191,7 @@
           left: 0;
           width: 150px;
           background-color: #ffffff;
+          z-index: 20;
           li {
             border-bottom: 1px solid #ccc;
             a {
