--- a/app/sass/content/_home-catalog.scss
+++ b/app/sass/content/_home-catalog.scss
@@ -14,8 +14,9 @@
       padding: 10px 0;
       width: 24%;
       float: left;
-      margin-right: 1%;
-      margin-bottom: 1%;
+      margin-right: 1.3%;
+      margin-bottom: 1.3%;
+      box-sizing: border-box;
       &:nth-child(4n+4) {
         margin-right: 0;
       }
