--- a/app/sass/content/_home-stock.scss
+++ b/app/sass/content/_home-stock.scss
@@ -91,6 +91,10 @@
           color: #3c9dd0;
           text-transform: uppercase;
         }
+        .counter {
+          color: #2c3e50;
+          text-transform: lowercase;
+        }
       }
       h3 {
         color: #2c3e50;
