--- a/app/sass/content/_home-head.scss
+++ b/app/sass/content/_home-head.scss
@@ -40,6 +40,11 @@
         top: -150px;
         right: -40px;
         height: 530px;
+        @include breakpoint(max-width 992px) {
+          height: 450px;
+          top: -80px;
+          right: -140px;
+        }
       }
     }
   }
