--- a/app/sass/content/_home-stock.scss
+++ b/app/sass/content/_home-stock.scss
@@ -20,6 +20,9 @@
         list-style: none;
         @include display-flex(flex);
         @include align-items(center);
+        @include breakpoint(max-width 992px) {
+          @include flex-direction(column);
+        }
         padding: 20px;
         max-width: 25%;
         img {
