--- a/app/sass/header/_head.scss
+++ b/app/sass/header/_head.scss
@@ -11,6 +11,9 @@
     @include justify-content(space-between);
     height: 30px;
     margin: 30px 0;
+    @include breakpoint(max-width 992px) {
+      height: 60px;
+    }
     li {
       list-style: none;
       padding: 1.5%;
@@ -19,17 +22,26 @@
       color: #000;
       text-transform: uppercase;
     }
+    .wrap {
+      @include display-flex(flex);
+      @include breakpoint(max-width 992px) {
+        @include flex-direction(column);
+      }
+    }
     &__location {
       @include display-flex(flex);
       @include flex-direction(row);
       @include flex-grow(1);
       @include align-items(center);
+      padding-right: 20px;
+
     }
     &__timework {
       @include display-flex(flex);
       @include flex-direction(row);
       @include align-items(center);
       @include flex-grow(1);
+
     }
     &__nav {
       @include display-flex(flex);
@@ -66,12 +78,18 @@
         &::placeholder {
           color: #afafaf;
         }
+        @include breakpoint(max-width 992px) {
+          width: 310px;
+        }
       }
       span {
         position: absolute;
         left: 380px;
         top: 3px;
         cursor: pointer;
+        @include breakpoint(max-width 992px) {
+          left: 300px;
+        }
       }
     }
     &__callback {
