--- a/app/sass/content/_style.scss
+++ b/app/sass/content/_style.scss
@@ -6,3 +6,5 @@
 @import "_home-catalog";
 @import "_home-video";
 @import "_shipping-and-paymen";
+@import "_shipping-order";
+@import "_shipping-payment";
