--- a/app/sass/content/_style.scss
+++ b/app/sass/content/_style.scss
@@ -9,3 +9,6 @@
 @import "_shipping-order";
 @import "_shipping-payment";
 @import "_shipping-delivery";
+@import "_repairs-services";
+@import "_repair-shop";
+@import "_repair-warranty-service";
