--- a/app/sass/base/_base.scss
+++ b/app/sass/base/_base.scss
@@ -12,6 +12,7 @@ body{
     text-align: left;
     vertical-align: baseline;
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 a {
