--- a/app/sass/content/_home-stock.scss
+++ b/app/sass/content/_home-stock.scss
@@ -83,9 +83,15 @@
       }
     }
     &__left {
+      @include breakpoint(max-width 992px) {
+        position: absolute;
+        width: 66%;
+        padding-right: 2%;
+      }
       width: 49%;
       position: relative;
       float: left;
+      overflow: hidden;
       h2 {
         font-size: 30px;
         color: #2c3e50;
@@ -118,10 +124,18 @@
       }
     }
     &__right {
+      @include breakpoint(max-width 992px) {
+        width: 100%;
+        float: left;
+      }
       position: relative;
       float: right;
       width: 49%;
-      >.block {
+      .block {
+        @include breakpoint(max-width 992px) {
+          width: 30%;
+          float: left;
+        }
         width: 48%;
         float: left;
         position: relative;
@@ -132,6 +146,9 @@
         }
         &:nth-child(even) {
           float: right;
+          @include breakpoint(max-width 992px) {
+            float: left;
+          }
         }
         img {
           max-width: 183px;
@@ -145,6 +162,7 @@
           &__img {
             img {
               height: 20px;
+              width: 20px;
             }
             p {
               font-size: 10px;
@@ -155,6 +173,36 @@
           font-size: 18px;
           font-weight:700;
           margin: 5px 0;
+        }
+      }
+      .for-middle-screen {
+        display: none;
+        @include breakpoint(max-width 992px) {
+          display: block;
+        }
+      }
+      &__md-right {
+        @include breakpoint(max-width 992px) {
+          position: relative;
+          float: right;
+          width: 31%;
+          .block {
+            width: 100%;
+          }
+        }
+      }
+      &__md-bottom {
+        @include breakpoint(max-width 992px) {
+          position: relative;
+          float: left;
+          width: 100%;
+          .block {
+            width: 31%;
+            margin-right: 3%;
+            &:last-child {
+              margin-right: 0;
+            }
+          }
         }
       }
     }
