add page reviews for desktop

--- a/app/sass/content/_style.scss
+++ b/app/sass/content/_style.scss
@@ -12,3 +12,5 @@
 @import "_repairs-services";
 @import "_repair-shop";
 @import "_repair-warranty-service";
+@import "_reviews-about";
+@import "_reviews-feedback";
