--- a/app/sass/content/_home-head.scss
+++ b/app/sass/content/_home-head.scss
@@ -1,6 +1,9 @@
 .home-head {
   background-color: #d4dfe1;
   margin-top: 20px;
+  @include breakpoint(max-width 712px) {
+    margin-top: 70px;
+  }
   &__wrap {
     position: relative;
     float: left;
@@ -11,22 +14,53 @@
       float: left;
       width: 320px;
       padding-bottom: 50px;
+      @include breakpoint(max-width 712px) {
+        margin-bottom: 30px;
+        width: 50%;
+      }
+      @include breakpoint(max-width 520px) {
+        width: 40%;
+      }
       h1 {
         font-size: 35px;
         font-weight: 700;
         padding-top: 30px;
         color: #2c3e50;
         margin-bottom: 10px;
+        @include breakpoint(max-width 712px) {
+          font-size: 15px;
+        }
+        @include breakpoint(max-width 520px) {
+          padding-top: 0;
+        }
       }
       h2.sale {
         font-size: 25px;
         font-weight: 700;
         color: #2c3e50;
+        @include breakpoint(max-width 712px) {
+          font-size: 15px;
+          margin-bottom: 30px;
+
+        }
         span {
           color: #3c9dd0;
         }
       }
+      a {
+        @include breakpoint(max-width 712px) {
+           right: -50px;
+           position: absolute;
+           margin-top: 20px;
+         }
+        @include breakpoint(max-width 520px) {
+          right: -120px;
+        }
+      }
       p {
+        @include breakpoint(max-width 712px) {
+          font-size: 9px;
+        }
         font-size: 15px;
         color: #979dab;
         margin-top: 0;
@@ -35,15 +69,36 @@
     &__img {
       position: relative;
       float: right;
+      @include breakpoint(max-width 712px) {
+        width: 50%;
+      }
+      @include breakpoint(max-width 520px) {
+        width: 60%;
+      }
       img {
         position: absolute;
         top: -150px;
         right: -40px;
         height: 530px;
         @include breakpoint(max-width 992px) {
-          height: 450px;
+           height: 450px;
+           top: -80px;
+           right: -140px;
+         }
+        @include breakpoint(max-width 712px) {
+          height:auto;
+          right: 0;
+          max-width: 100%;
+        }
+        @include breakpoint(max-width 520px) {
           top: -80px;
-          right: -140px;
+        }
+        @include breakpoint(max-width 440px) {
+          top: -40px;
+        }
+        @include breakpoint(max-width 390px) {
+          right: -60px;
+          max-width: 300px;
         }
       }
     }
