--- a/app/sass/content/_home-video.scss
+++ b/app/sass/content/_home-video.scss
@@ -8,5 +8,9 @@
     &:last-child {
       margin-right: 0;
     }
+    @include breakpoint(max-width 650px) {
+      width: 100%;
+      margin-bottom: 15px;
+    }
   }
 }
