--- a/app/sass/content/_home-catalog.scss
+++ b/app/sass/content/_home-catalog.scss
@@ -5,7 +5,19 @@
     margin: 40px 0;
     position: relative;
     float: left;
+    width: 100%;
+    @include breakpoint(max-width 600px) {
+      .for-mobile {
+        display: none;
+      }
+    }
     .block {
+      @include breakpoint(max-width 600px) {
+        width: 49%;
+        &:nth-child(2n+2) {
+          margin-right: 0;
+        }
+      }
       position: relative;
       background-color: #ffffff;
       border: 1px solid #e4e4e4;
