--- a/app/sass/content/_home-reviews.scss
+++ b/app/sass/content/_home-reviews.scss
@@ -14,6 +14,13 @@
       position: relative;
       float: left;
       &__img {
+        @include breakpoint(max-width 729px) {
+          float: none;
+          margin:0 auto;
+        }
+        @include breakpoint(max-width 450px) {
+          width: 40%;
+        }
         position: relative;
         float: left;
         width: 15%;
@@ -25,6 +32,9 @@
         }
       }
       &__text {
+        @include breakpoint(max-width 729px) {
+          width: auto;
+        }
         position: relative;
         float: right;
         padding: 20px 35px;
