--- a/app/sass/content/_home-stock.scss
+++ b/app/sass/content/_home-stock.scss
@@ -16,6 +16,11 @@
       border: 1px solid #e4e4e4;
       border-radius: 10px;
       background-color: #fff;
+      @include breakpoint(max-width 600px) {
+        display: block;
+        position: relative;
+        float: left;
+      }
       li {
         list-style: none;
         @include display-flex(flex);
@@ -23,15 +28,46 @@
         @include breakpoint(max-width 992px) {
           @include flex-direction(column);
         }
+        @include breakpoint(max-width 600px) {
+          display: block;
+          position: relative;
+          float: left;
+          min-width: 50%;
+          padding: 2%;
+          box-sizing: border-box;
+        }
+        @include breakpoint(max-width 425px) {
+          width: 45%;
+          padding: 20px 0;
+          height: 92px;
+        }
         padding: 20px;
-        max-width: 25%;
+        width: 25%;
         img {
           position: relative;
           float: left;
           padding-right: 10px;
+          @include breakpoint(max-width 425px) {
+            clear: both;
+            text-align: center;
+          }
         }
         p {
           float: left;
+          font-size: 12px;
+          font-weight: 300;
+          color: #a4a4a4;
+          @include breakpoint(max-width 992px) {
+
+          }
+          @include breakpoint(max-width 425px) {
+            margin: 0;
+            width: 50%;
+          }
+        }
+        span{
+          font-weight: 700;
+          color:#3a4b5c;
         }
       }
       li.vertical-line {
@@ -39,6 +75,9 @@
         height: 40px;
         padding: 0;
         background-color: #e4e4e4;
+        @include breakpoint( max-width 600px) {
+          display: none;
+        }
       }
     }
   }
@@ -88,10 +127,17 @@
         width: 66%;
         padding-right: 2%;
       }
+      @include breakpoint(max-width 613px) {
+        width: 98%;
+        position: relative;
+      }
       width: 49%;
       position: relative;
       float: left;
       overflow: hidden;
+      img {
+        max-width: 100%
+      }
       h2 {
         font-size: 30px;
         color: #2c3e50;
@@ -180,6 +226,9 @@
         @include breakpoint(max-width 992px) {
           display: block;
         }
+        @include breakpoint(max-width 613px) {
+          display: none;
+        }
       }
       &__md-right {
         @include breakpoint(max-width 992px) {
@@ -188,6 +237,18 @@
           width: 31%;
           .block {
             width: 100%;
+          }
+        }
+        @include breakpoint(max-width 613px) {
+          width: 100%;
+          margin-top: 10px;
+          .block {
+            width: 48%;
+            margin: 0;
+            margin-right: 1%;
+            img {
+              max-width: 100%;
+            }
           }
         }
       }
@@ -201,6 +262,18 @@
             margin-right: 3%;
             &:last-child {
               margin-right: 0;
+            }
+          }
+        }
+        @include breakpoint(max-width 613px) {
+          width: 100%;
+          margin-top: 20px;
+          .block {
+            width: 48%;
+            margin: 0;
+            margin-right: 1%;
+            img {
+              max-width: 100%;
             }
           }
         }
