--- a/app/sass/header/_head.scss
+++ b/app/sass/header/_head.scss
@@ -80,12 +80,24 @@
       @include breakpoint(max-width 712px) {
         @include order(-1);
         margin: 0px 5px;
+        width: 100%;
       }
       @include flex-grow(6);
 
       position: relative;
       z-index: 20;
+
+      form {
+        @include breakpoint(max-width 992px) {
+          display: block;
+          position: relative;
+          width: 310px;
+          margin: 0 auto;
+        }
+      }
       input {
+        display: block;
+        position: relative;
         height: 38px;
         width: 400px;
         border-color: #3c9dd0;
@@ -95,7 +107,10 @@
           color: #afafaf;
         }
         @include breakpoint(max-width 992px) {
-          width: 310px;
+          width: 100%;
+        }
+        @include breakpoint(max-width 370px) {
+          width: 270px;
         }
       }
       span {
@@ -103,8 +118,12 @@
         left: 380px;
         top: 3px;
         cursor: pointer;
+        z-index: 20;
         @include breakpoint(max-width 992px) {
           left: 300px;
+        }
+        @include breakpoint(max-width 370px) {
+          left: 250px;
         }
       }
     }
