--- a/app/sass/content/_shipping-and-paymen.scss
+++ b/app/sass/content/_shipping-and-paymen.scss
@@ -10,6 +10,9 @@
     right: -63px;
     top: 39px;
     z-index: 1;
+    @include  breakpoint(max-width 992px) {
+      display: none;
+    }
   }
   &__title{
     color: #2c3e50;
@@ -55,6 +58,10 @@
       display: block;
       position: relative;
       float: left;
+      @include breakpoint(max-width 992px) {
+        width: 100%;
+        float: none;
+      }
       p{
         color: #adadad;
         font-size: 15px;
@@ -67,28 +74,46 @@
       float: left;
       width: 645px;
       margin-bottom: 44px;
+      @include breakpoint(max-width 992px) {
+        margin: 0 auto 44px auto;
+        float: none;
+      }
+      @include breakpoint(max-width 660px) {
+        width: 100%;
+      }
       table>thead>tr{
         height: 51px;
         text-align: center;
         background-color: #e8e8e8;
+        @include breakpoint(max-width 500px) {
+          height: 40px;
+        }
         td{
           width: 212px;
           color: #2c3e50;
           font-size: 15px;
           font-weight: 700;
           text-transform: uppercase;
+          @include breakpoint(max-width 500px) {
+            font-size: 10px;
+          }
         }
       }
       table>tbody>tr{
         height: 51px;
         text-align: center;
         background-color: #f2f2f2;
+        @include breakpoint(max-width 500px) {
+          height: 40px;
+        }
         td{
           width: 212px;
           color: #2c3e50;
           font-size: 12px;
           font-weight: 400;
-
+          @include breakpoint(max-width 500px) {
+            font-size: 9px;
+          }
         }
       }
     }
