--- a/app/sass/content/_shipping-order.scss
+++ b/app/sass/content/_shipping-order.scss
@@ -23,13 +23,44 @@
     float: left;
     width: 100%;
     margin-bottom: 40px;
-    p{
+    p {
+      @include breakpoint(max-width 600px) {
+        height:calc(15px * 1 * 15);
+        display: -webkit-box;
+        line-height: 1;
+        -webkit-line-clamp: 15;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+
+      }
+
       color: #adadad;
       font-size: 15px;
       font-weight: 400;
       &:last-child{
         margin-bottom: 0;
       }
+    }
+    p.full-text {
+      height: 100%;
+      -webkit-line-clamp: 100%;
+    }
+  }
+  .btn {
+    display: none;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+    @include breakpoint(max-width 600px) {
+      display: block;
+    }
+    .btn-for-middle {
+      color: #ffaa45;
+      text-transform: uppercase;
+      font-size: 15px;
+      text-decoration: underline;
     }
   }
 }
