--- a/app/sass/content/_shipping-payment.scss
+++ b/app/sass/content/_shipping-payment.scss
@@ -33,6 +33,9 @@
       position: relative;
       float: left;
       width: 35%;
+      @include breakpoint(max-width 992px) {
+        display: none;
+      }
       img{
         left: -143px;
         display: block;
@@ -45,6 +48,9 @@
       position: relative;
       float: left;
       width: 65%;
+      @include breakpoint(max-width 992px) {
+        width: 100%;
+      }
       h3{
         color: #adadad;
         font-size: 15px;
