--- a/app/sass/content/_repair-shop.scss
+++ b/app/sass/content/_repair-shop.scss
@@ -15,6 +15,9 @@
       position: relative;
       float: left;
       text-align: center;
+      @include breakpoint(max-width 700px) {
+        display: none;
+      }
       img{
         width: 100%;
         object-fit: cover;
@@ -27,6 +30,9 @@
       position: relative;
       float: left;
       width: calc(100% - 320px);
+      @include breakpoint(max-width 700px) {
+        width: 100%;
+      }
       h3{
         color: #2c3e50;
         font-size: 25px;
