--- a/app/sass/content/_repair-warranty-service.scss
+++ b/app/sass/content/_repair-warranty-service.scss
@@ -14,6 +14,13 @@
       position: relative;
       float: left;
       width: 586px;
+      padding-bottom: 20px;
+      @include breakpoint(max-width 992px) {
+        width: 60%;
+      }
+      @include breakpoint(max-width 700px) {
+        width: 100%;
+      }
       h1{
         color: #2c3e50;
         font-size: 25px;
@@ -37,6 +44,13 @@
       position: relative;
       float: left;
       width: calc(100% - 586px);
+      @include breakpoint(max-width 992px) {
+        width: 40%;
+        margin-top: 60px;
+      }
+      @include breakpoint(max-width 700px) {
+        display: none;
+      }
       img{
         object-fit: cover;
         width: 100%;
