--- a/app/sass/content/_reviews-about.scss
+++ b/app/sass/content/_reviews-about.scss
@@ -31,6 +31,9 @@
       position: relative;
       float: left;
       width: 100%;
+      @include breakpoint(max-width 700px) {
+        text-align: center;
+      }
       &__photo {
         display: block;
         position: relative;
@@ -38,9 +41,17 @@
         margin-right: 22px;
         width: 93px;
         height: 93px;
+        @include breakpoint(max-width 700px) {
+          width: 100%;
+          float: none;
+        }
         img {
           width: 100%;
           object-fit: cover;
+          @include breakpoint(max-width 700px) {
+            object-fit: none;
+            width:auto;
+          }
         }
       }
       h4 {
@@ -69,6 +80,9 @@
       margin: 0 auto;
       padding-top: 22px;
       padding-bottom: 30px;
+      @include breakpoint(max-width 992px) {
+        width: 80%;
+      }
       p {
         color: #2c3e50;
         font-size: 18px;
