--- a/app/sass/content/_reviews-feedback.scss
+++ b/app/sass/content/_reviews-feedback.scss
@@ -9,6 +9,10 @@
     position: relative;
     float: left;
     width: 380px;
+    z-index: 5;
+    @include breakpoint(max-width 700px) {
+      width: 100%;
+    }
     h1{
       color: #2c3e50;
       font-size: 25px;
@@ -67,11 +71,20 @@
     position: relative;
     float: left;
     width: calc(100% - 380px);
+    @include breakpoint(max-width 700px) {
+      display: none;
+    }
     img{
       width: 100%;
       object-fit: cover;
       position: relative;
       bottom: -41px;
+      @include breakpoint(max-width 992px) {
+        width: 500px;
+        position: absolute;
+        top: 50px;
+        left: -40px;
+      }
     }
   }
 }
