--- a/app/sass/content/_contacts.scss
+++ b/app/sass/content/_contacts.scss
@@ -9,6 +9,11 @@
     position: relative;
     float: left;
     width: 50%;
+    @include breakpoint(max-width 600px) {
+      width: 100%;
+      float: none;
+      margin-top: 380px;
+    }
     h1 {
       color: #2c3e50;
       font-size: 25px;
@@ -67,6 +72,15 @@
       }
     }
   }
+  .text {
+    @include breakpoint(max-width 600px) {
+      width: 100%;
+      position: absolute;
+      float: left;
+      top: -380px;
+
+    }
+  }
   &__text {
     display: block;
     position: relative;
@@ -74,6 +88,10 @@
     width: 50%;
     padding-left: 15px;
     box-sizing: border-box;
+    @include breakpoint(max-width 600px) {
+      width: 100%;
+      padding-left: 5px;
+    }
     h4 {
       color: #586470;
       font-size: 15px;
