--- a/app/sass/content/_card-product.scss
+++ b/app/sass/content/_card-product.scss
@@ -97,12 +97,64 @@
     border-radius: 10px;
     box-sizing: border-box;
     background-color: #ffffff;
+    .flexslider {
+      border: none;
+      margin-bottom: 0;
+      box-sizing: border-box;
+      padding: 10px;
+      .flex-viewport {
+        padding: 30px 0;
+        margin: 0 30px;
+        box-sizing: border-box;
+      }
+      .flex-control-thumbs {
+        margin-top: 70px;
+      }
+      .flex-control-thumbs li{
+        width: 33%;
+      }
+      .flex-direction-nav {
+        height: 40px;
+        width: 96px;
+        position: absolute;
+        top: 270px;
+        right: 20px;
+      }
+      .flex-prev {
+        background: url(../img/icons/flex-prev-left.png) center center no-repeat;
+        opacity: 1;
+        z-index: 5;
+
+      }
+      .flex-prev::before {
+        content: '';
+        width: 100%;
+        height: 100%;
+      }
+      .flex-next {
+        background: url(../img/icons/flex-next-right.png) center center no-repeat;
+        opacity: 1;
+        z-index: 5;
+      }
+      .flex-next::before {
+        content: '';
+        width: 100%;
+        height: 100%;
+      }
+      .flexslider:hover .flex-direction-nav .flex-prev,
+      .flexslider:hover .flex-direction-nav .flex-next{
+        opacity: 1;
+        left: 0;
+      }
+    }
     &__slider {
       width: 50%;
       position: relative;
       float: left;
       .slides {
-
+        img {
+          max-width: 100%;
+        }
       }
     }
     &__block {
