--- a/app/sass/content/_style.scss
+++ b/app/sass/content/_style.scss
@@ -18,3 +18,6 @@
 @import "_internal";
 @import "_shopping-head";
 @import "_card-product";
+@import "_characteristics";
+@import "_descriptions";
+@import "_card-product-product";
