--- a/app/sass/content/_basket.scss
+++ b/app/sass/content/_basket.scss
@@ -74,13 +74,14 @@
           padding: 10px;
           margin-left: 3px;
           color: #2c3e50;
+          cursor: pointer;
         }
         .cipher {
           display: inline-block;
           position: relative;
           float: left;
-          height: 30px;
-          width: 30px;
+          height: 25px;
+          width: 25px;
           background-color: #ffffff;
           margin: 0;
           margin-top: 3px;
@@ -95,6 +96,7 @@
           right: 0;
           width: 10%;
           color: #2c3e50;
+          cursor: pointer;
         }
       }
       &__top {
