add responsive for basket

--- a/app/sass/content/_basket.scss
+++ b/app/sass/content/_basket.scss
@@ -18,6 +18,9 @@
     width: 80%;
     margin-top: 15px;
     margin-left: 30px;
+    @include breakpoint(max-width 992px) {
+      margin-left: 15px;
+    }
   }
   .radio + .forcheck .checked {
     display: block;
@@ -41,11 +44,26 @@
     width: 100%;
     position: relative;
     float: left;
+    @include breakpoint(max-width 728px) {
+      .for-mobile {
+        display: none;
+      }
+    }
     .block {
       position: relative;
       float: left;
       padding: 5px;
       text-align: center;
+      @include breakpoint(max-width 728px) {
+        box-sizing: border-box;
+        width: 100%;
+        &:nth-child(4) {
+          width: 50%;
+        }
+        &:nth-child(5) {
+          width: 50%;
+        }
+      }
       h3 {
         font-size: 15px;
         font-weight: 700;
@@ -105,6 +123,9 @@
         height: 48px;
         margin-bottom: 10px;
         padding: 0 30px;
+        @include breakpoint(max-width 992px) {
+          padding: 0px 15px;
+        }
       }
       &__bottom {
         position: relative;
@@ -120,6 +141,9 @@
       &:last-child {
         width: 99%;
         text-align: right;
+        @include breakpoint(max-width 992px) {
+          width: 100%;
+        }
         h3 {
           padding-right: 20px;
         }
@@ -129,10 +153,20 @@
       }
       &:nth-child(3) {
         width: 430px;
+        @include breakpoint(max-width 992px) {
+          width: 275px;
+        }
+        @include breakpoint(max-width 728px) {
+          width: 100%;
+        }
       }
       &:nth-child(6) {
         padding-right: 0;
+        @include breakpoint(max-width 728px) {
+          padding-right: 5px;
+        }
       }
+
     }
   }
   &__data {
@@ -152,6 +186,10 @@
         margin: 1%;
         padding-left: 10px;
         font-size: 15px;
+        @include breakpoint(max-width 728px) {
+          width: 100%;
+          margin: 1% 0;
+        }
         &:last-of-type {
           width: 100%;
           margin-left: 0;
@@ -214,16 +252,30 @@
         padding: 10px;
         height: 50px;
         width: 80px;
+        @include breakpoint(max-width 992px) {
+          width: 50px;
+          margin: 10px 5px;
+        }
+
         &:first-child{
           margin-left: 0;
         }
       }
       .description {
         width: 67.5%;
+        @include breakpoint(max-width 992px) {
+          width: 64.5%;
+        }
+        @include breakpoint(max-width 728px) {
+          width: calc(100% - 110px);
+        }
       }
       .price {
         width: 115px;
         margin-right: 0;
+        @include breakpoint(max-width 728px) {
+          display: none;
+        }
         h3 {
           padding-top: 15px;
           text-align: center;
@@ -253,12 +305,19 @@
         padding: 10px;
         height: 50px;
         width: 80px;
+        @include breakpoint(max-width 992px) {
+          width: 50px;
+          margin: 10px 5px;
+        }
         &:first-child{
            margin-left: 0;
         }
         &:last-child{
           margin-right: 0;
           width:calc(100% - 150px);
+          @include breakpoint(max-width 992px) {
+            width:calc(100% - 110px);
+          }
         }
       }
     }
